--- a/src/App.css
+++ b/src/App.css
@@ -187,6 +187,43 @@
     background-size: 100vw 100vh !important;
   }
 }
+@media screen and (max-width:500px){
+  .question-number{
+    font-size: 12px;
+  }
+
+  .timer{
+    font-size: 12px;
+  }
+}
+@media screen and (max-width:300px){
+
+  .question-number{
+    font-size: 10px;
+  }
+
+  .timer{
+    font-size: 10px;
+  }
+
+}
+
+
+/* Add to your CSS file */
+@keyframes slideInFromRight {
+  from {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+.slide-in {
+  animation: slideInFromRight 0.8s ease-out;
+}
 
 
 
@@ -602,6 +639,11 @@ select {
   width: 50vw;
 }
 
+.add-question-section{
+  display: flex;
+  flex-direction: column;
+}
+
 .quiz-para-section{
   display: flex;
   justify-content: center;
@@ -637,6 +679,7 @@ select {
   justify-content: center;
   flex-wrap: wrap;
   row-gap: 30px;
+  padding-bottom: 30px;
 }
 
 .category-result-section{
